# micov

./: .gitattributes  .gitignore  ChangeLog.md  LICENSE  MANIFEST.in  Makefile  README.md  cli_test.sh  micov.conda.yml  micov.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
ci/: conda_host_env.yml  conda_requirements.txt  requirements.lint.txt  requirements.test.txt
example/binning/: stats_bins.tsv  stats_by_variance_of_read_hits.tsv  stats_by_variance_of_sample_hits.tsv
example/consolidate/: consolidated.tgz  paths.txt
example/coverages/: 10317.000035779.cov  10317.000075986.cov  10317.000087047.cov  10317.000092644.cov  10317.000094753.cov  10317.000096861.cov  10317.000096909.cov  10317.000096989.cov  10317.000097005.cov  10317.000098379.cov  10317.000098435.cov  10317.000100515.cov  10317.000100524.cov  10317.000101073.cov  10317.000101074.cov  10317.000101076.cov  10317.000101078.cov  10317.000101084.cov  10317.000101094.cov  10317.000101096.cov  10317.000101100.cov  10317.000101103.cov  10317.000101104.cov  10317.000101112.cov  10317.000101114.cov  10317.000101119.cov  10317.000101124.cov  10317.000101132.cov  10317.000101133.cov  10317.000101145.cov  10317.000101174.cov  10317.000101175.cov  10317.000101178.cov  10317.000101180.cov  10317.000101198.cov  10317.000101211.cov  10317.000101212.cov  10317.000101242.cov  10317.000101250.cov  10317.000101251.cov  (+9 more)
example/metadata/: feature_metadata.txt  length.tsv  sample_metadata.txt
example/parquet/: example.coverage.parquet  example.covered_positions.parquet
example/plots/per_sample_groups/: example.G000154205.G000154205.dog.cumulative.ks.tsv  example.G000154205.G000154205.dog.position-plot-1_10000th-scale.tsv
example/plots/per_sample_groups_monte/: example.G000154205.G000154205.dog.cumulative-monte-unfocused.ks.tsv  example.G000436435.G000436435.dog.cumulative-monte-unfocused.ks.tsv  example.G000436435.G000436435.dog.position-plot-1_10000th-scale.tsv  genome_ranks.tsv
example/plots/per_sample_groups_monte_percentile/: example_percentile.G000154205.G000154205.dog.cumulative-monte-unfocused.ks.tsv  example_percentile.G000436435.G000436435.dog.cumulative-monte-unfocused.ks.tsv
example/plots/per_sample_groups_percentile/: example_percentile.G000436435.G000436435.dog.cumulative.ks.tsv
example/samfiles/: 10317.000035779.sam.xz  10317.000075986.sam.xz  10317.000087047.sam.xz  10317.000092644.sam.xz  10317.000094753.sam.xz  10317.000096861.sam.xz  10317.000096909.sam.xz  10317.000096989.sam.xz  10317.000097005.sam.xz  10317.000098379.sam.xz  10317.000098435.sam.xz  10317.000100515.sam.xz  10317.000100524.sam.xz  10317.000101073.sam.xz  10317.000101074.sam.xz  10317.000101076.sam.xz  10317.000101078.sam.xz  10317.000101084.sam.xz  10317.000101094.sam.xz  10317.000101096.sam.xz  10317.000101100.sam.xz  10317.000101103.sam.xz  10317.000101104.sam.xz  10317.000101112.sam.xz  10317.000101114.sam.xz  10317.000101119.sam.xz  10317.000101124.sam.xz  10317.000101132.sam.xz  10317.000101133.sam.xz  10317.000101145.sam.xz  10317.000101174.sam.xz  10317.000101175.sam.xz  10317.000101178.sam.xz  10317.000101180.sam.xz  10317.000101198.sam.xz  10317.000101211.sam.xz  10317.000101212.sam.xz  10317.000101242.sam.xz  10317.000101250.sam.xz  10317.000101251.sam.xz  (+9 more)
micov/: __init__.py  _constants.py  _convert.py  _cov.py  _io.py  _per_sample.py  _plot.py  _quant.py  _rank.py  _utils.py  _version.py  _view.py  cli.py
micov/tests/: test_convert.py  test_cov.py  test_io.py  test_per_sample.py  test_quant.py  test_view.py
micov/tests/test_data/: test.sam.xz
