# adapted from scikit-bio

[build-system]
requires = ["setuptools", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py38"
exclude = [
    "micov/tests/*", 
]

[tool.check-manifest]
ignore = [
    # created by conda-incubator/setup-miniconda@v3 action
    "ci/setup-miniconda-patched-conda_host_env.yml",
]

[tool.ruff.lint]
select = ["E", "W", "D"]  # pycodestyle (E, W), pydocstyle (D)
ignore = [
    "D203",  # puts a space before class docstrings
    "D213",  # puts summary on second line
    "D400",  # redundant with D415 in place
    "D301",  # forces raw string literals
]
